--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 fastapi
 uvicorn
 transformers
-scikit-learn
-python-dotenv
 huggingface_hub
-# CPU 전용 PyTorch 설치
+python-dotenv
+
 torch==2.1.0+cpu
 -f https://download.pytorch.org/whl/torch_stable.html
+
+numpy<2.0
