--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # Python version 
-python_version >= 3.10
+# python_version >= 3.10
 
 # === 핵심 라이브러리 (GPU용 PyTorch는 pip에서 별도 URL로 설치해야 함. 아래 참고) ===
 transformers==4.39.3
@@ -15,3 +15,11 @@ jinja2>=3.1.6
 httpx>=0.26.0
 python-multipart>=0.0.7
 starlette==0.46.2
+
+
+
+# CPU 환경에서 실행 (CUDA 없이)
+# pip install torch torchvision torchaudio
+# GPU 환경에서 실행 (CUDA 11.8 기준)
+# pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118
+
